extra margin fix

--- a/source/assets/stylesheets/components/_about.scss
+++ b/source/assets/stylesheets/components/_about.scss
@@ -17,13 +17,13 @@
 
 
 .about-container {
-    width: 950px;
-    margin: 86px auto;
+    width: 65%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     justify-items: center;
     align-content: center;
+    padding: 86px 0;
 }
 
 .about-title {
@@ -130,6 +130,9 @@
   .about-points {
     padding: 0 162px;
   }
+  .about-container {
+    width: 100%;
+  }
   .about-card {
     display: inline-block;
     margin:0 auto;
@@ -146,6 +149,7 @@
   .about-points {
     padding: 0 42px;
   }
+
 }
 
 @media (max-width: 400px){
