--- a/source/assets/stylesheets/components/_hero.scss
+++ b/source/assets/stylesheets/components/_hero.scss
@@ -124,6 +124,9 @@
   #hero-tech-stack  {
     font-size: 18px;
   }
+  .hero-info {
+    flex-wrap: wrap;
+  }
 }
 
 
