--- a/source/assets/stylesheets/components/_projects.scss
+++ b/source/assets/stylesheets/components/_projects.scss
@@ -175,7 +175,7 @@
   }
   .device.device-gold.device-macbook {
   transform: scale(0.5);
-  margin-left: 100px;
+  // margin-left: 100px;
   }
 
 
@@ -213,10 +213,15 @@
   .device.device-spacegray.device-iphone-8 {
   transform: scale(0.5);
   }
+  .device-container {
+    overflow: hidden;
+    margin: 0;
+  }
   .project-device-iphone-8 {
     margin-top: -175px;
     margin-bottom: -150px;
     width: 90%;
+    overflow: hidden;
   }
   .project-subtitle{
     padding-top: 32px;
@@ -225,11 +230,11 @@
   transform: scale(0.5);
   margin-left: 8px;
   }
-  .project-device-macbook {
-    margin-top: -48px;
-    margin-right: -252px;
-    width: 90%;
-  }
+  // .project-device-macbook {
+  //   margin-top: -48px;
+  //   margin-right: -252px;
+  //   width: 90%;
+  // }
   #projects {
     padding-bottom: 60px;
   }
